# icfpc-2012

./: .ghci  .gitignore  Bolder.cabal  Contributors.txt  Notes.txt  TODO.txt  profile.html
Attic/: ParcsMain.hs
Binaries/Lightning/: lifter
Haskell/: Bolder.hs  ContestMain.hs  GameMain.hs  Main.hs  Planning.hs  Simulation.hs  VisMain.hs  Visualization.hs  World.hs
Haskell/Bolder/: Planning.hs  Simulation.hs  Visualization.hs  World.hs
Maps/Ems/: puzzle1.map  puzzle2.map  puzzle3.map  puzzle4.map
Maps/Toy/: crush.map  no-lambdas.map  pile.map
Packaging/: README  install
Tests/: Profiling.hs  Tests.hs
