name: Bolder
version: 1.0
cabal-version: 1.12
build-type: Simple

Executable bolder
  main-is: Main.hs
  hs-source-dirs: Haskell
  build-depends: array >= 0.4.0.0 && < 1,
                 base >= 4.1 && < 5,
                 containers >= 0.4.2.1 && < 1,
                 text >= 0.11.2.2 && < 1,
                 conduit >= 0.5.2 && < 1,
                 mtl >= 2.0.1.0 && < 3,
                 resourcet >= 0.3.2.1 && < 1,
                 unix >= 2.5.1.0 && < 3
  default-language: Haskell2010
  
test-suite tests
 hs-source-dirs:  Haskell, Tests
 type:            exitcode-stdio-1.0
 main-is:         Tests.hs
 build-depends:   base >= 3 && < 5,
                  HUnit >= 1.2 && < 1.3,
                  test-framework-quickcheck2 >= 0.2 && < 0.3,
                  test-framework-hunit >= 0.2 && < 0.3,
                  test-framework >= 0.6 && < 0.7,
                  QuickCheck >= 2.4 && < 2.5
 default-language: Haskell2010
